RESOLVED FIXED310769
Fix SharedBuffer:isSpanWithinBounds()
https://bugs.webkit.org/show_bug.cgi?id=310769
Summary Fix SharedBuffer:isSpanWithinBounds()
Chris Dumez
Reported 2026-03-25 22:21:03 PDT
Fix SharedBuffer:isSpanWithinBounds(). Only `end` is range-checked; `begin` is never validated.
Attachments
Chris Dumez
Comment 1 2026-03-25 22:24:41 PDT
EWS
Comment 2 2026-03-26 02:10:36 PDT
Committed 309975@main (5d2a8a719f04): <https://commits.webkit.org/309975@main> Reviewed commits have been landed. Closing PR #61375 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-26 02:11:12 PDT
Note You need to log in before you can comment on or make changes to this bug.