Fix SharedBuffer:isSpanWithinBounds() https://bugs.webkit.org/show_bug.cgi?id=310769

Reviewed by Kimmo Kinnunen.

The function only checked that otherSpan.end() falls within
`[thisSpan.begin(), thisSpan.end()]``. It never checks that
`otherSpan.begin() >= thisSpan.begin()`. A span that starts before the
buffer but ends within it would incorrectly return true.

Test: Tools/TestWebKitAPI/Tests/WebCore/SharedBuffer.cpp

* Source/WebCore/platform/SharedBuffer.h:
(WebCore::SharedBuffer::isSpanWithinBounds const):
* Tools/TestWebKitAPI/Tests/WebCore/SharedBuffer.cpp:
(TestWebKitAPI::TEST_F(FragmentedSharedBufferTest, isSpanWithinBounds)):

Canonical link: https://commits.webkit.org/309975@main