Source/WebCore/platform/SharedBuffer.h
@@ -453,10 +453,11 @@ inline bool SharedBuffer::isSpanWithinBounds(std::span<T> otherSpan) const
 {
     auto thisSpan = this->span();
     auto otherByteSpan = asByteSpan(otherSpan);
-    if (std::to_address(otherByteSpan.end()) < std::to_address(thisSpan.begin()))
-        return false;
-    size_t offset = std::to_address(otherByteSpan.end()) - std::to_address(thisSpan.begin());
-    return offset <= size(); // "<=" because end is included as valid.
+    auto* thisBegin = std::to_address(thisSpan.begin());
+    auto* thisEnd = std::to_address(thisSpan.end());
+    auto* otherBegin = std::to_address(otherByteSpan.begin());
+    auto* otherEnd = std::to_address(otherByteSpan.end());
+    return otherBegin >= thisBegin && otherEnd <= thisEnd;
 }
 
 } // namespace WebCore
